k8s/monitoring/eureka-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-external
  namespace: ecommerce-dev
spec:
  selector:
    app: service-discovery
  ports:
    - name: http
      port: 8761
      targetPort: 8761
      protocol: TCP
  type: LoadBalancer
