k8s/monitoring/prometheus-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: ecommerce-dev
spec:
  selector:
    app: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
  type: LoadBalancer
