k8s/monitoring/zipkin-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-external
  namespace: ecommerce-dev
spec:
  selector:
    app: zipkin
  ports:
    - name: http
      port: 9411
      targetPort: 9411
      protocol: TCP
  type: LoadBalancer
